--- a/style.css
+++ b/style.css
@@ -1,29 +1,96 @@
+@keyframes tipsy {
+  0% {
+    transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-50%) rotate(360deg);
+  }
+}
+
 * {
-  margin: 0px;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 hr {
   margin: 10px 0px 10px 0px;
   visibility: hidden;
 }
-.html,
+
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+.progress-container {
+  width: 100%;
+  margin-left: -20px;
+  height: 8px;
+  background: #ccc;
+}
+.progress-bar {
+  height: 8px;
+  background: url(./images/cyan.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 0%;
+}
+
 body {
   /*background-image: url(./images/4.gif);*/
-  background-color: aliceblue;
+  margin: 20px;
+  font-family: helvetica, arial, sans-serif;
+  background-color: aliceblue; /* #2e2e31; */
   background-repeat: no-repeat;
   background-size: cover;
   color: black;
   display: grid;
   height: 100%;
-  width: 100%;
-  margin: 20px;
+  max-width: 100%;
+}
+
+/* Hide scrollbar for WebKit-based browsers */
+body::-webkit-scrollbar {
+  height: 0px; /* x-axis */
+  width: 0px; /* y-axis */
+}
+
+body h2 {
+  color: #fffbf1;
+  text-shadow: 0 20px 25px #2e2e31, 0 40px 60px #2e2e31;
+  text-align: center;
+}
+
+center {
+  color: #fffbf1;
+  text-shadow: 0 20px 25px #2e2e31, 0 40px 60px #2e2e31;
+  font-size: 80px;
+  font-weight: bold;
+  text-decoration: none;
+  letter-spacing: -3px;
+  margin: 0;
+}
+.divisions {
+  min-height: 400px;
 }
 ul {
   margin: 0 0 0 15px;
 }
+h2 {
+  padding: 25px 0px; /* 10-top&bottom 0-left&right */
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+/* a:hover {
+  color: whitesmoke;
+} */
 .dt,
 dd {
   margin-top: 0px;
@@ -36,6 +103,59 @@ footer {
 .copyright {
   margin: 10px 0 0 0;
 }
+
+.project-board {
+  padding: 15px 0px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+}
+.project-card {
+  width: 20%;
+  border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  position: relative;
+}
+.project-card:hover {
+  transform: scale(1.1);
+}
+
+.project-image {
+  height: 10vw;
+  width: 100%;
+  background-image: url(./images/2.jpeg);
+  background-size: cover;
+}
+.project-matter {
+  padding: 15px;
+  margin-bottom: 100;
+}
+.project-title {
+  padding: 3% 0px;
+  text-align: center;
+}
+.linkable-project .project-title {
+  /* Define the text color for linkable projects */
+  background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text; /* Change this to your desired text color */
+}
+
+/*Initially hide project desc*/
+.project-desc {
+  display: none;
+}
+
+/* Show project description on hover */
+.project-card:hover .project-desc {
+  display: block;
+}
+
 .wrapper .button {
   color: black;
   display: inline-block;
@@ -131,6 +251,7 @@ footer {
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 .wrapper .button:nth-child(3) span {
   margin: 0 0 0 30px;
